# clip_vg_rep

./: README.md  pyproject.toml  test.py  train.py
eval/: __init__.py  refcocog_parquet.py  zero_shot_refcocog.py
src/visual_grounding/: __init__.py  __main__.py  config.py  data.py  eval.py  logging_utils.py  metrics.py  train.py
src/visual_grounding/models/: __init__.py  transvg.py
utils/: box_utils.py  misc.py  plot_rep_geometry.py  visualization.py
